pkg/xds/generator/egress/testdata/same-kuma-io-service.golden.yaml
resources:
- name: kri_extsvc_mesh-1___externalservice-1_80
  resource:
    '@type': type.googleapis.com/envoy.config.cluster.v3.Cluster
    circuitBreakers:
      thresholds:
      - trackRemaining: true
    connectTimeout: 5s
    dnsLookupFamily: V4_ONLY
    loadAssignment:
      clusterName: kri_extsvc_mesh-1___externalservice-1_80
      endpoints:
      - lbEndpoints:
        - endpoint:
            address:
              socketAddress:
                address: kuma.io
                portValue: 80
          loadBalancingWeight: 1
          metadata:
            filterMetadata:
              envoy.lb:
                kuma.io/protocol: http
                mesh: mesh-1
              envoy.transport_socket_match:
                kuma.io/protocol: http
                mesh: mesh-1
        locality:
          subZone: priority-0
    name: kri_extsvc_mesh-1___externalservice-1_80
    type: STRICT_DNS
    typedExtensionProtocolOptions:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        '@type': type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        explicitHttpConfig:
          httpProtocolOptions: {}
- name: kri_extsvc_mesh-2___externalservice-2_80
  resource:
    '@type': type.googleapis.com/envoy.config.cluster.v3.Cluster
    circuitBreakers:
      thresholds:
      - trackRemaining: true
    connectTimeout: 5s
    dnsLookupFamily: V4_ONLY
    loadAssignment:
      clusterName: kri_extsvc_mesh-2___externalservice-2_80
      endpoints:
      - lbEndpoints:
        - endpoint:
            address:
              socketAddress:
                address: kuma.io
                portValue: 80
          loadBalancingWeight: 1
          metadata:
            filterMetadata:
              envoy.lb:
                kuma.io/protocol: http
                mesh: mesh-2
              envoy.transport_socket_match:
                kuma.io/protocol: http
                mesh: mesh-2
        locality:
          subZone: priority-0
    name: kri_extsvc_mesh-2___externalservice-2_80
    type: STRICT_DNS
    typedExtensionProtocolOptions:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        '@type': type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        explicitHttpConfig:
          httpProtocolOptions: {}
- name: self_inbound_ze_10002
  resource:
    '@type': type.googleapis.com/envoy.config.listener.v3.Listener
    address:
      socketAddress:
        address: 192.168.0.1
        portValue: 10002
    enableReusePort: false
    filterChains:
    - filterChainMatch:
        serverNames:
        - adc6ffd9eacb86dec.externalservice-1.80.mesh-1.mes
        transportProtocol: tls
      filters:
      - name: envoy.filters.network.http_connection_manager
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          httpFilters:
          - name: envoy.filters.http.rbac
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.filters.http.rbac.v3.RBAC
              matcher:
                onNoMatch:
                  action:
                    name: envoy.filters.rbac.action
                    typedConfig:
                      '@type': type.googleapis.com/envoy.config.rbac.v3.Action
                      action: DENY
                      name: default
          - name: envoy.filters.http.router
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          internalAddressConfig:
            cidrRanges:
            - addressPrefix: 127.0.0.1
              prefixLen: 32
          routeConfig:
            name: kri_extsvc_mesh-1___externalservice-1_80
            validateClusters: false
            virtualHosts:
            - domains:
              - '*'
              name: kri_extsvc_mesh-1___externalservice-1_80
              routes:
              - match:
                  prefix: /
                route:
                  autoHostRewrite: true
                  cluster: kri_extsvc_mesh-1___externalservice-1_80
          statPrefix: kri_extsvc_mesh-1___externalservice-1_80
      name: kri_extsvc_mesh-1___externalservice-1_80
      transportSocket:
        name: envoy.transport_sockets.tls
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
          commonTlsContext:
            combinedValidationContext:
              defaultValidationContext:
                matchTypedSubjectAltNames:
                - matcher:
                    prefix: spiffe://mesh-1/
                  sanType: URI
              validationContextSdsSecretConfig:
                name: system_mtls_ca_mesh-1
                sdsConfig:
                  ads: {}
                  resourceApiVersion: V3
            tlsCertificateSdsSecretConfigs:
            - name: system_mtls_identity_mesh-1
              sdsConfig:
                ads: {}
                resourceApiVersion: V3
          requireClientCertificate: true
    - filterChainMatch:
        serverNames:
        - aaebf6d76f62deafe.externalservice-2.80.mesh-2.mes
        transportProtocol: tls
      filters:
      - name: envoy.filters.network.http_connection_manager
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          httpFilters:
          - name: envoy.filters.http.rbac
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.filters.http.rbac.v3.RBAC
              matcher:
                onNoMatch:
                  action:
                    name: envoy.filters.rbac.action
                    typedConfig:
                      '@type': type.googleapis.com/envoy.config.rbac.v3.Action
                      action: DENY
                      name: default
          - name: envoy.filters.http.router
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          internalAddressConfig:
            cidrRanges:
            - addressPrefix: 127.0.0.1
              prefixLen: 32
          routeConfig:
            name: kri_extsvc_mesh-2___externalservice-2_80
            validateClusters: false
            virtualHosts:
            - domains:
              - '*'
              name: kri_extsvc_mesh-2___externalservice-2_80
              routes:
              - match:
                  prefix: /
                route:
                  autoHostRewrite: true
                  cluster: kri_extsvc_mesh-2___externalservice-2_80
          statPrefix: kri_extsvc_mesh-2___externalservice-2_80
      name: kri_extsvc_mesh-2___externalservice-2_80
      transportSocket:
        name: envoy.transport_sockets.tls
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
          commonTlsContext:
            combinedValidationContext:
              defaultValidationContext:
                matchTypedSubjectAltNames:
                - matcher:
                    prefix: spiffe://mesh-2/
                  sanType: URI
              validationContextSdsSecretConfig:
                name: system_mtls_ca_mesh-2
                sdsConfig:
                  ads: {}
                  resourceApiVersion: V3
            tlsCertificateSdsSecretConfigs:
            - name: system_mtls_identity_mesh-2
              sdsConfig:
                ads: {}
                resourceApiVersion: V3
          requireClientCertificate: true
    listenerFilters:
    - name: envoy.filters.listener.tls_inspector
      typedConfig:
        '@type': type.googleapis.com/envoy.extensions.filters.listener.tls_inspector.v3.TlsInspector
    name: self_inbound_ze_10002
    statPrefix: self_inbound_ze_10002
    trafficDirection: INBOUND
- name: system_mtls_ca_mesh-1
  resource:
    '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.Secret
    name: system_mtls_ca_mesh-1
    validationContext:
      trustedCa:
        inlineBytes: Q0E=
- name: system_mtls_ca_mesh-2
  resource:
    '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.Secret
    name: system_mtls_ca_mesh-2
    validationContext:
      trustedCa:
        inlineBytes: Q0E=
- name: system_mtls_identity_mesh-1
  resource:
    '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.Secret
    name: system_mtls_identity_mesh-1
    tlsCertificate:
      certificateChain:
        inlineBytes: Q0VSVA==
      privateKey:
        inlineBytes: S0VZ
- name: system_mtls_identity_mesh-2
  resource:
    '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.Secret
    name: system_mtls_identity_mesh-2
    tlsCertificate:
      certificateChain:
        inlineBytes: Q0VSVA==
      privateKey:
        inlineBytes: S0VZ
